# Protonic

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/: build-arch.sh  build-deb.sh  create-release.sh  protonic.desktop
packaging/arch/: PKGBUILD  PKGBUILD-bin
src/: main.rs
ui/: .appwindow.slint.kate-swp  appwindow.slint
