[package]
name = "protonic"
version = "0.2.0"
edition = "2024"

[dependencies]
slint = "1.14.1"
steamlocate = "2.0.1"
device_query = "4.0.1"
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
rfd = "0.17.2"
rodio = { version = "0.19", default-features = false, features = ["vorbis"] } #don't upgrade beyond .19 for now.
keyvalues-serde = "0.2.3"
keyvalues-parser = "0.2.3"
dirs = "6.0"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
strip = true
opt-level = 3
